All_Component_DX/force-app/main/default/objects/Function_Definition__c/fields/Example__c.field-meta.xml
<CustomField>
    <fullName>Example__c</fullName>
    <label>Example</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>