All_Component_DX/force-app/main/default/objects/Function_Definition__c/fields/SM_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FORMULA</fullName>
            </value>
            <value>
                <fullName>OPDOC</fullName>
            </value>
            <value>
                <fullName>FILE_NAME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>