All_Component_DX/force-app/main/default/objects/Function_Definition__c/fields/Syntax__c.field-meta.xml
<CustomField>
    <fullName>Syntax__c</fullName>
    <label>Syntax</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>